<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wtrtk_ros2_driver</name>
  <version>1.0.0</version>
  <description>Driver for wit motion WTRTK RTK GNSS modules</description>
  <maintainer email="techms5499@gmail.com">mechasolution</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-serial</exec_depend>
  
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>rtcm_msgs</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>ntrip_client</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
